# freemarket-api

./: .gitignore  Cargo.toml  README.md  pom.xml
src/: main.rs
src/domain/: mod.rs
src/domain/models/: address.rs  user.rs
src/domain/types/: cep.rs  cpf.rs  email.rs  mod.rs  password.rs  phone_number.rs
src/domain/utils/: auth.rs
src/main/java/com/ecommerce/freemerkat/: FreemerkatApplication.java
src/main/java/com/ecommerce/freemerkat/controllers/: OrderController.java  ProductController.java  UserController.java
src/main/java/com/ecommerce/freemerkat/dto/: OrderDTO.java  ProductDTO.java  UserDTO.java
src/main/java/com/ecommerce/freemerkat/entities/: Order.java  Product.java  User.java
src/main/java/com/ecommerce/freemerkat/enums/: OrderStatus.java
src/main/java/com/ecommerce/freemerkat/mapper/: OrderMapper.java  ProductMapper.java  UserMapper.java
src/main/java/com/ecommerce/freemerkat/repositories/: OrderRepository.java  ProductRepository.java  UserRepository.java
src/main/java/com/ecommerce/freemerkat/services/: OrderService.java  ProductService.java  UserService.java
src/test/java/com/ecommerce/freemerkat/: FreemerkatApplicationTests.java
