[package]
name = "freemarket-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.21.0", features = ["serde"] }
regex = "1.12.3"
thiserror = "2.0.18"
passcheck = "0.2.0"
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
brazilian_utils = "0.1.0"
brasilapi = "0.8.0"
phonenumber = "0.3.9+9.0.21"